<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, main!</string>
    <string name="app_name">锁趣</string>
    <string name="purchase_history">历史记录</string>
    <string name="yestoday_income">今日收益</string>
    <string name="total_rewards">累计收益</string>
    <string name="getting">...</string>

    <string name="lock_setting">锁屏设置</string>
    <string name="my_account">我的帐户</string>
    <string name="my_download">最新活动</string>
    <string name="flow_control">幸运抽奖</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="check_update">检查更新</string>
    <string name="about_huaqian">关于锁趣</string>
    <string name="tmp_version">none</string>
    
    <string name="virtue_item">虚拟商品</string>
    <string name="real_item">实物商品</string>
    <string name="crad_item">提现充值</string>
     <string name="buy_date">购买时间:</string>
    
    <string name="nickname">昵称</string>
    <string name="manage_delivery_address">管理收货地址</string>
    <string name="telephone_no">手机号</string>
    <string name="recommendation_code">邀请码</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="modify_password">修改密码</string>
    <string name="quit_login">退出登录</string>
    <string name="setting_uesr_state">账户状态</string>
    <string name="confirm">确定</string>
    
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    
    
    <string name="hint_new_nickname">请输入您的昵称</string>
    <string name="common_string_submit">提交</string>
    <string name="please_input_ur_rd_user">请输入邀请人的邀请码或手机号</string>
    
    <string name="please_choose_your_birthday">请选择您的生日</string>
    <string name="cancel">取消</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
</resources>