<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/dialog_container" android:background="@color/grey_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" style="@style/dialog_content_header">
        <TextView android:text="@string/please_choose_your_birthday" style="@style/dialog_text_title" />
    </RelativeLayout>
    <View android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" style="@style/custom_divider" />
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" style="@style/dialog_content_body">
        <com.terry.wheelview.WheelView android:id="@id/birthday_dialog_year" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.0" />
        <TextView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/year" />
        <com.terry.wheelview.WheelView android:id="@id/birthday_dialog_month" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.0" />
        <TextView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/month" />
        <com.terry.wheelview.WheelView android:id="@id/birthday_dialog_day" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.0" />
        <TextView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/day" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" style="@style/dialog_content_footer">
        <Button android:textColor="@color/white" android:id="@id/birthday_dialog_btn_cancel" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/cancel" android:layout_weight="1.0" style="@style/button_white_short" />
        <Button android:textColor="@color/white" android:id="@id/birthday_dialog_btn_confirm" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="0.0dip" android:text="@string/confirm" android:layout_weight="1.0" style="@style/button_red_short" />
    </LinearLayout>
</LinearLayout>