<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/new_setting_scroll_view"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:id="@id/my_account_rl_public_info" style="@style/new_setting_linear_layout_list">
            <RelativeLayout android:onClick="goNicknameSetting" style="@style/new_setting_relative_layout_item">
                <TextView android:text="@string/nickname" style="@style/new_setting_grey_text" />
                <ImageView android:id="@id/my_account_img_nickname_right_arrow" style="@style/new_setting_img_arrow" />
                <TextView android:id="@id/my_account_current_nickname" android:text="@string/tmp_version" android:layout_toLeftOf="@id/my_account_img_nickname_right_arrow" style="@style/new_setting_grey_right_note" />
            </RelativeLayout>
            <View style="@style/custom_divider" />
            <RelativeLayout android:onClick="goManageAddress" style="@style/new_setting_relative_layout_item">
                <TextView android:text="@string/manage_delivery_address" style="@style/new_setting_grey_text" />
                <ImageView style="@style/new_setting_img_arrow" />
            </RelativeLayout>
        </LinearLayout>
        <View android:id="@id/tempa" android:layout_marginTop="45.0dip" android:layout_below="@id/my_account_rl_public_info" style="@style/new_setting_short_divider_width" />
        <LinearLayout android:id="@id/my_account_rl_private_info" android:layout_marginTop="1.1999817dip" android:layout_below="@id/tempa" style="@style/new_setting_linear_layout_list">
            <RelativeLayout android:onClick="goBoundPhone" style="@style/new_setting_relative_layout_item">
                <TextView android:text="@string/telephone_no" style="@style/new_setting_grey_text" />
                <ImageView android:id="@id/my_account_img_telephone_right_arrow" style="@style/new_setting_img_arrow" />
                <TextView android:id="@id/my_account_current_telephone" android:text="@string/tmp_version" android:layout_toLeftOf="@id/my_account_img_telephone_right_arrow" style="@style/new_setting_grey_right_note" />
            </RelativeLayout>
            <View style="@style/custom_divider" />
            <RelativeLayout android:id="@id/recommend_layout" android:onClick="goRecommendationCode" style="@style/new_setting_relative_layout_item">
                <TextView android:id="@id/temp2" android:text="@string/recommendation_code" style="@style/new_setting_grey_text" />
                <ImageView android:id="@id/recommend_notice" android:background="@drawable/icon_item_notice_bubble" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_toRightOf="@id/temp2" android:layout_centerVertical="true" />
                <ImageView android:id="@id/my_account_img_recommendation_right_arrow" style="@style/new_setting_img_arrow" />
                <TextView android:id="@id/my_account_current_code" android:text="@string/tmp_version" android:layout_toLeftOf="@id/my_account_img_recommendation_right_arrow" style="@style/new_setting_grey_right_note" />
            </RelativeLayout>
            <View android:id="@id/recom_below_line" style="@style/custom_divider" />
            <RelativeLayout android:onClick="goGenderSetting" style="@style/new_setting_relative_layout_item">
                <TextView android:id="@id/temp" android:text="@string/gender" style="@style/new_setting_grey_text" />
                <ImageView android:id="@id/gender_notice" android:background="@drawable/icon_item_notice_bubble" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_toRightOf="@id/temp" android:layout_centerVertical="true" />
                <ImageView android:id="@id/my_account_img_gender_right_arrow" style="@style/new_setting_img_arrow" />
                <TextView android:id="@id/my_account_gender" android:text="@string/tmp_version" android:layout_toLeftOf="@id/my_account_img_gender_right_arrow" style="@style/new_setting_grey_right_note" />
            </RelativeLayout>
            <View style="@style/custom_divider" />
            <RelativeLayout android:onClick="goBirthday" style="@style/new_setting_relative_layout_item">
                <TextView android:id="@id/temp1" android:text="@string/birthday" style="@style/new_setting_grey_text" />
                <ImageView android:id="@id/birthday_notice" android:background="@drawable/icon_item_notice_bubble" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_toRightOf="@id/temp1" android:layout_centerVertical="true" />
                <ImageView android:id="@id/my_account_img_birthday_right_arrow" style="@style/new_setting_img_arrow" />
                <TextView android:id="@id/my_account_birthday" android:text="@string/tmp_version" android:layout_toLeftOf="@id/my_account_img_birthday_right_arrow" style="@style/new_setting_grey_right_note" />
            </RelativeLayout>
            <View android:layout_marginTop="45.0dip" style="@style/new_setting_short_divider_width" />
        </LinearLayout>
        <LinearLayout android:id="@id/temp" android:layout_below="@id/my_account_rl_private_info" style="@style/new_setting_linear_layout_list">
            <RelativeLayout android:id="@id/setting_user_state" android:onClick="goModifyPassword" style="@style/new_setting_relative_layout_item">
                <TextView android:text="@string/setting_uesr_state" style="@style/new_setting_grey_text" />
                <ImageView android:id="@id/temp" style="@style/new_setting_img_arrow" />
                <TextView android:id="@id/my_account_state" android:text="@string/tmp_version" android:layout_toLeftOf="@id/temp" style="@style/new_setting_grey_right_note" />
            </RelativeLayout>
            <View style="@style/custom_divider" />
            <RelativeLayout android:onClick="goModifyPassword" style="@style/new_setting_relative_layout_item">
                <TextView android:text="@string/modify_password" style="@style/new_setting_grey_text" />
                <ImageView style="@style/new_setting_img_arrow" />
            </RelativeLayout>
            <View style="@style/custom_divider" />
            <RelativeLayout android:onClick="goLogout" style="@style/new_setting_relative_layout_item">
                <TextView android:text="@string/quit_login" style="@style/new_setting_grey_text" />
                <ImageView style="@style/new_setting_img_arrow" />
            </RelativeLayout>
            <View style="@style/custom_divider" />
        </LinearLayout>
        <Button android:id="@id/info_usbmit" android:visibility="gone" android:text="提交" android:layout_below="@id/temp" style="@style/button_red_long" />
    </RelativeLayout>
</ScrollView>